package com.qwest.backend.domain.util;

public enum AuthorRole {
    FOUNDER,
    HOST,
    TRAVELER,
    PENDING_HOST
}
